--- a/style.css
+++ b/style.css
@@ -37,6 +37,27 @@ body {
     -o-transition: all 500ms ease;
     transition: all 500ms ease;
 }
+.button {
+    background-color: transparent;
+    color: white;
+    font-size: large;
+    text-decoration: none;
+    padding: 7px 20px;
+    border:none;
+    margin-right: 15px;
+}
+
+.button:hover {
+    background-color: white;
+    color: black;
+    border-radius: 50px;
+    padding: 7px 20px;
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
+}
 
 .containerA{
     color: white;
