--- a/style.css
+++ b/style.css
@@ -187,18 +187,24 @@
         font-family: 'Combo', cursive;
         /* margin-right: 100px; */
         font-size: 1rem;
-        
+
 
     }
-    .logo{
-        width: 10px;
-        height: 10px;
+
+    .logo1 {
+        width: 25px;
+        height: 25px;
+    }
+    .logo {
+        width: 20px;
+        height: 20px;
     }
 
 
-    .item {
+    .item1 {
         font-size: small;
         text-decoration: none;
+        margin: 0px;
         /* padding: 10px 20px; */
     }
 
@@ -251,7 +257,7 @@
         height: 420px;
         margin-top: -420px;
         margin-left: 16%;
-       border: wheat solid 2px;
+        border: wheat solid 2px;
     }
 
     .image1 {
@@ -275,11 +281,6 @@
     }
 
     .image3 {
-        float: left;
-        margin: 5px;
-        width: 32%;
-        height: 400px;
-        text-align: center;
         display: none;
 
     }
@@ -299,8 +300,7 @@
     }
 
     .img3 {
-        height: 100%;
-        width: 300px;
+        display: none;
 
     }
 
@@ -320,16 +320,11 @@
     }
 
     .img3d {
-        height: 100%;
-        width: 300px;
-        object-fit: cover;
+        display: none;
     }
 
     .containerB {
-
-        position: absolute;
-        margin-left: 42%;
-        width: max-content;
+        display: none;
     }
 
     p {
