--- a/style.css
+++ b/style.css
@@ -1,175 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Combo&family=Gentium+Book+Plus&display=swap');
 
-@media (min-device-width:1200px) and (max-device-width: 2000px) {
-    body {
-        margin: 0;
-        background-repeat: no-repeat;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
 
-    .nav {
-        font-family: 'Comic Neue', cursive;
-        font-weight: 700;
-        font-family: 'Combo', cursive;
-        margin-right: 100px;
-        font-size: 1.7rem;
-
-    }
-
-
-    .item {
-        font-size: large;
-        text-decoration: none;
-        padding: 10px 20px;
-    }
-
-    .item:hover {
-        background-color: white;
-        color: black;
-        border-radius: 50px;
-        padding: 10px 20px;
-        -webkit-transition: all 500ms ease;
-        -moz-transition: all 500ms ease;
-        -ms-transition: all 500ms ease;
-        -o-transition: all 500ms ease;
-        transition: all 500ms ease;
-    }
-
-    .button {
-        background-color: transparent;
-        color: white;
-        font-size: large;
-        text-decoration: none;
-        padding: 7px 20px;
-        border: none;
-        margin-right: 15px;
-    }
-
-    .button:hover {
-        background-color: white;
-        color: black;
-        border-radius: 50px;
-        padding: 7px 20px;
-        -webkit-transition: all 500ms ease;
-        -moz-transition: all 500ms ease;
-        -ms-transition: all 500ms ease;
-        -o-transition: all 500ms ease;
-        transition: all 500ms ease;
-    }
-
-    .containerA {
-        color: white;
-
-        width: 70%;
-        height: 420px;
-        margin-top: 10px;
-        margin-left: 16%;
-    }
-
-    .containerD {
-        position: absolute;
-        color: white;
-
-        width: 70%;
-        height: 420px;
-        margin-top: -420px;
-        margin-left: 16%;
-    }
-
-    .image1 {
-        float: left;
-        margin: 5px;
-
-        width: 32%;
-        height: 400px;
-        text-align: center;
-
-    }
-
-    .image2 {
-        margin: 5px;
-        float: left;
-
-        width: 32%;
-        height: 400px;
-        text-align: center;
-    }
-
-    .image3 {
-        float: left;
-        margin: 5px;
-
-        width: 32%;
-        height: 400px;
-        text-align: center;
-
-    }
-
-    .img1 {
-        height: 100%;
-        width: 300px;
-
-
-    }
-
-    .img2 {
-        height: 100%;
-        width: 300px;
-
-
-    }
-
-    .img3 {
-        height: 100%;
-        width: 300px;
-
-    }
-
-    .img1d {
-        height: 100%;
-        width: 300px;
-        ;
-        object-fit: cover;
-
-    }
-
-    .img2d {
-        height: 100%;
-        width: 300px;
-        object-fit: cover;
-
-    }
-
-    .img3d {
-        height: 100%;
-        width: 300px;
-        object-fit: cover;
-    }
-
-    .containerB {
-
-        position: absolute;
-        margin-left: 42%;
-        width: max-content;
-    }
-
-    p {
-        color: rgb(0, 0, 0);
-        font-family: 'Comic Neue', cursive;
-        font-weight: bold;
-        font-size: large;
-        background-color: gold;
-        text-align: center;
-        padding: 5px 10px;
-        border: rgb(129, 111, 6) ridge 5px;
-        border-radius: 3px;
-    }
-}
-
-@media (max-width: 600px) and (orientation:portrait) {
+@media only screen and (max-width: 600px) {
     body {
         margin: 0;
         background-size: cover;
@@ -195,6 +27,7 @@
         width: 25px;
         height: 25px;
     }
+
     .logo {
         width: 20px;
         height: 20px;
@@ -257,7 +90,7 @@
         height: 420px;
         margin-top: -420px;
         margin-left: 16%;
-        
+        border: wheat solid 2px;
     }
 
     .image1 {
@@ -267,7 +100,7 @@
         width: 150px;
         height: 250px;
         text-align: center;
-    
+        border: red solid 2px;
 
     }
 
@@ -277,8 +110,7 @@
         width: 150px;
         height: 250px;
         text-align: center;
-        display:non
-        
+        border: red solid 2px;
     }
 
     .image3 {
@@ -289,8 +121,6 @@
     .img1 {
         height: 100%;
         width: 300px;
-                display:none;
-
 
 
     }
@@ -298,8 +128,6 @@
     .img2 {
         height: 100%;
         width: 300px;
-                display:none;
-
 
 
     }
@@ -321,8 +149,6 @@
         height: 100%;
         width: 300px;
         object-fit: cover;
-                display:none;
-
 
     }
 
@@ -344,20 +170,19 @@
         padding: 5px 10px;
         border: rgb(129, 111, 6) ridge 5px;
         border-radius: 3px;
-        display:none;
-
     }
+
 
 }
 
-/* @media (max-width: 500px) and (orientation:landscape){
+@media only screen and (min-width: 992px) {
     body {
         margin: 0;
         background-repeat: no-repeat;
-        -webkit-background-size: contain;
-        -moz-background-size: contain;
-        -o-background-size: contain;
-        background-size: contain;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
 
     .nav {
@@ -432,6 +257,7 @@
     .image1 {
         float: left;
         margin: 5px;
+
         width: 32%;
         height: 400px;
         text-align: center;
@@ -441,6 +267,7 @@
     .image2 {
         margin: 5px;
         float: left;
+
         width: 32%;
         height: 400px;
         text-align: center;
@@ -449,10 +276,10 @@
     .image3 {
         float: left;
         margin: 5px;
+
         width: 32%;
         height: 400px;
         text-align: center;
-        display: none;
 
     }
 
@@ -473,7 +300,6 @@
     .img3 {
         height: 100%;
         width: 300px;
-        display: none;
 
     }
 
@@ -496,7 +322,6 @@
         height: 100%;
         width: 300px;
         object-fit: cover;
-        display: none;
     }
 
     .containerB {
@@ -517,5 +342,4 @@
         border: rgb(129, 111, 6) ridge 5px;
         border-radius: 3px;
     }
-
-} */
+}
