--- a/style.css
+++ b/style.css
@@ -18,9 +18,11 @@
         font-weight: 700;
         font-family: 'Combo', cursive;
         /* margin-right: 100px; */
-        font-size: 1rem;
 
-
+    }
+    .nav1{
+        margin-top: 10px;
+        font-size: larger;
     }
 
     .logo1 {
@@ -56,7 +58,7 @@
     .button {
         background-color: transparent;
         color: white;
-        font-size: small;
+        font-size: large;
         text-decoration: none;
         padding: 7px 20px;
         border: none;
@@ -77,103 +79,116 @@
 
     .containerA {
         color: white;
-        width: 70%;
+        width: 80%;
         height: 300px;
-        margin-top: 10px;
-        margin-left: 16%;
+        margin-top: 40px;
+        margin-left:10%;
+        
     }
 
     .containerD {
         position: absolute;
         color: white;
         width: 70%;
-        height: 420px;
-        margin-top: -420px;
+        height: 300px;
+        margin-top: -300px;
         margin-left: 16%;
-        border: wheat solid 2px;
+       
+       
     }
 
     .image1 {
         float: left;
-        margin: 5px;
-
-        width: 150px;
+        margin: 20px 5px;
+        width: 40%;
         height: 250px;
         text-align: center;
-        border: red solid 2px;
+       
+        
+       
 
     }
 
     .image2 {
-        margin: 10px;
+        margin-left: 20px;
+        margin-bottom: 5px;
         float: left;
-        width: 150px;
-        height: 250px;
+        width: 40%;
+        height: 150px;
         text-align: center;
-        border: red solid 2px;
+       
+        
+    
+       
     }
 
     .image3 {
-        display: none;
+        margin-top: 5px;
+        margin-left: 20px;
+        float: left;
+        width: 40%;
+        height: 150px;
+        text-align: center;
+       
 
     }
 
     .img1 {
+       
+        padding: 0;
+        width: 180px;
         height: 100%;
-        width: 300px;
-
+        margin-left: -46px;
 
     }
 
     .img2 {
+        padding: 0;
+        margin-left: -20px;
+        width: 120%;
         height: 100%;
-        width: 300px;
 
 
     }
 
     .img3 {
-        display: none;
+        padding: 0;
+        width: 120%;
+        height: 100%;
+       
 
     }
 
     .img1d {
+        padding: 0;
+        width: 100%;
         height: 100%;
-        width: 300px;
-        ;
         object-fit: cover;
 
     }
 
     .img2d {
+        padding: 0;
+        width: 100%;
         height: 100%;
-        width: 300px;
         object-fit: cover;
 
     }
 
     .img3d {
-        display: none;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .containerB {
         display: none;
     }
 
-    p {
-        color: rgb(0, 0, 0);
-        font-family: 'Comic Neue', cursive;
-        font-weight: bold;
-        font-size: large;
-        background-color: gold;
-        text-align: center;
-        padding: 5px 10px;
-        border: rgb(129, 111, 6) ridge 5px;
-        border-radius: 3px;
-    }
-
 
 }
+
 
 @media only screen and (min-width: 992px) {
     body {
