--- a/style.css
+++ b/style.css
@@ -2,16 +2,17 @@
 
 
 @media only screen and (max-width: 600px) {
-    body {
+    /* body {
         margin: 0;
         background-size: cover;
         width: 100%;
         height: 100vh;
+        
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
-    }
+    } */
 
     .nav {
         font-family: 'Comic Neue', cursive;
@@ -79,7 +80,7 @@
 
     .containerA {
         color: white;
-        width: 80%;
+        width:100%;
         height: 300px;
         margin-top: 40px;
         margin-left:10%;
@@ -99,10 +100,11 @@
 
     .image1 {
         float: left;
-        margin: 20px 5px;
+        margin: 0px 5px;
         width: 40%;
-        height: 250px;
+        height: 200px;
         text-align: center;
+        
        
         
        
@@ -110,12 +112,14 @@
     }
 
     .image2 {
+        margin-top: -40px;
         margin-left: 20px;
         margin-bottom: 5px;
         float: left;
         width: 40%;
-        height: 150px;
+        height: 130px;
         text-align: center;
+        
        
         
     
@@ -127,8 +131,9 @@
         margin-left: 20px;
         float: left;
         width: 40%;
-        height: 150px;
+        height: 130px;
         text-align: center;
+        
        
 
     }
@@ -136,7 +141,7 @@
     .img1 {
        
         padding: 0;
-        width: 180px;
+        width: 140px;
         height: 100%;
         margin-left: -46px;
 
@@ -145,7 +150,7 @@
     .img2 {
         padding: 0;
         margin-left: -20px;
-        width: 120%;
+        width: 180%;
         height: 100%;
 
 
@@ -161,15 +166,17 @@
 
     .img1d {
         padding: 0;
-        width: 100%;
+        width: 80%;
         height: 100%;
+        margin-left: -50px;
         object-fit: cover;
 
     }
 
     .img2d {
         padding: 0;
-        width: 100%;
+        margin-left: -40px;
+        width: 120%;
         height: 100%;
         object-fit: cover;
 
@@ -177,7 +184,8 @@
 
     .img3d {
         padding: 0;
-        width: 100%;
+        margin-left: -40px;
+        width: 120%;
         height: 100%;
         object-fit: cover;
     }
