--- a/style.css
+++ b/style.css
@@ -2,17 +2,17 @@
 
 
 @media only screen and (max-width: 600px) {
-    /* body {
+    body {
         margin: 0;
-        background-size: cover;
+        background-size: fill;
         width: 100%;
         height: 100vh;
         
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    } */
+        -webkit-background-size: fill;
+        -moz-background-size: fill;
+        -o-background-size: fill;
+        background-size: fill;
+    }
 
     .nav {
         font-family: 'Comic Neue', cursive;
